# test-assignment

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
attendance_analyzer/: __main__.py  helpers.py  logic.py  reader.py  writer.py
attendance_analyzer/tests/integration/: test_main_script.py
attendance_analyzer/tests/unit/: helpers.py  test_cli.py  test_helpers.py  test_logic.py  test_reader.py  test_writer.py
resources/: test.xml
