[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["UTVova <utvova1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
pytest = "^6.1.1"
pytest-mock = "^3.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
