[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["UTVova <utvova1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
pytest = "^6.1.1"
pytest-mock = "^3.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.7.1"
isort = "^5.6.4"
seed-isort-config = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true